initial live page

--- a/index.html
+++ b/index.html
@@ -1,2 +1,175 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="apple-itunes-app" content="app-id=1103400123">
+    <title>🌯&nbsp;BURRITO AF&nbsp;🌯 </title>
+    <style>
+      @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,800);
+      body {
+        font-family: "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+        font-size: 10pt;
+        background: #ffe3a6;
+        padding-top: 4rem;
+        color: #ac8738;
+        -webkit-font-smoothing: antialiased;
+      }
 
+      a {
+        color: #ac4038;
+        text-decoration: none;
+      }
+      a:hover {
+        color: #d8736b;
+      }
+      .wrapper { width: 640px; margin: auto; margin-bottom: 2em;}
+      .header {
+      }
+      .header .logo {
+        float: left;
+      }
+      .header .text {
+        float: left;
+      }
+      .header .text h1 {
+        margin-top: 1.3em;
+        margin-bottom: .5em;
+        font-size: 32pt;
+      }
+      .header .logo img {
+        width: 96px;
+      }
+      .wrapper > .device-iphone {
+        margin-top: 2em;
+      }
+      .wrapper > .device-iphone img.screenshot, .wrapper > .device-iphone video {
+        width: 190px;
+        position: absolute;
+        margin-top: 55px;
+        margin-left: 15px;
+      }
+      .wrapper > .device-iphone img.overlay {
+        width: 220px;
+        position: absolute;
+      }
+      .wrapper > .content {
+        margin-left: 16rem;
+        margin-top: -3.2rem;
+        font-size: 10pt;
+        line-height: 16pt;
+      }
+      .button {
+        margin-top: 2rem;
+      }
+
+      h2 {
+        margin-bottom: 1em;
+        margin-top: 0;
+      }
+      h3 {
+        display: block;
+        margin-top: 1rem;
+        margin-bottom: 0;
+        text-transform: uppercase;
+        font-size: 9pt;
+      }
+      p {
+        font-size: 8pt;
+        margin-top: 0;
+        margin-bottom: 1rem;
+      }
+      ul > li, em {
+        font-size: 8pt;
+      }
+      footer {
+        text-align: center;
+        margin-bottom: 1rem;
+        padding-top: 2rem;
+        font-size: 7pt;
+        text-transform: uppercase;
+        color: #d8b56b;
+      }
+
+      blockquote {
+        border-left: 4pt solid #ac8738;
+        padding-left: 8pt;
+        font-size: 8pt;
+        margin-left: 1rem;
+        margin-bottom: 1rem;
+      }
+
+      .logo > img {
+        width: 60px;
+      }
+
+      .cf:before, .cf:after {
+        content: " ";
+        display: table;
+      }
+
+      .cf:after {
+        clear: both;
+      }
+
+      .cf {
+        *zoom: 1;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="wrapper cf">
+      <div class="device-iphone">
+        <div id="slides" style="position: absolute;">
+          <video autoplay muted loop src="v1.mp4" poster="s1.png"></video>
+        </div>
+        <img src="test-1.png" class="overlay" >
+      </div>
+      <div class="content">
+        <div class="header">
+            <div class="text">
+              <h1>BURRITO AF</h1>
+            </div>
+            <br style="clear: both;" />
+        </div>
+        <div>
+          <h2>A compass to your next burrito.&nbsp;&nbsp;🌯</h2>
+          <p>Whether it's a heavy bar night, happy hour or just a casual dinner, finding the closest taqueria for a kick-ass burrito is sometimes hard. Especially if it's past midnight and you're hopelessly wandering around the city looking for the perfect meal to end your night with.</p>
+          <p>BURRITO AF is your companion for exactly these moments and will guide you safely to the next taqueria serving you a mix of delicious ingredients wrapped in a huge flour tortilla.</p>
+          <h3>What people say</h3>
+          <blockquote>
+            Somebody give this guy a billion dollars in seed funding, this is brilliant!
+            <p>— <em>Brandon</em></p>
+          </blockquote>
+          <blockquote>
+            A downright game-changer in burrito acquisition.
+            <p>— <em>Alex</em></p>
+          </blockquote>
+          <h3>We cater</h3>
+          <p>
+            <ul>
+              <li>San Francisco + Bay Area</li>
+              <li>Los Angeles</li>
+              <li>San Diego</li>
+            </ul>
+            <em>More soon! Want your city here? <a href="mailto:hello@burrito.af">Let us know!</a></em>
+          </p>
+        </div>
+        <div class="button">
+          <a href="https://itunes.apple.com/us/app/burrito.af/id1103400123?ls=1&mt=8"><img src="download.svg" title="Download on the App Store" alt="Download on the App Store" /></a>
+        </div>
+      </div>
+    </div>
+    <footer>
+      Copyright 2016 <a href="http://haunold.me/">Nicolas Haunold</a> — Data provided by <a href="https://foursquare.com/">Foursquare</a>
+    </footer>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-76467794-2', 'auto');
+      ga('send', 'pageview');
+    </script>
+  </body>
+</html>
