--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="wrapper cf">
       <div class="device-iphone">
         <div id="slides" style="position: absolute;">
-          <video autoplay muted loop src="v1.mp4" poster="s1.png"></video>
+          <video autoplay muted loop src="v1.mp4"></video>
         </div>
         <img src="test-1.png" class="overlay" >
       </div>
