--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="apple-itunes-app" content="app-id=1103400123">
+    <meta property="og:description" content="A compass to your next burrito. Download on the App Store today.">
+    <meta property="og:image" content="icon.png">
     <title>🌯&nbsp;BURRITO AF&nbsp;🌯 </title>
     <style>
       @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,800);
