--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="apple-itunes-app" content="app-id=1103400123">
-    <meta property="og:description" content="A compass to your next burrito. Download on the App Store today.">
-    <meta property="og:image" content="icon.png">
-    <title>🌯&nbsp;BURRITO AF&nbsp;🌯 </title>
+    <meta property="og:description" content="A compass to your next burrito. Whether it's a heavy bar night, happy hour or just a casual dinner, finding the closest taqueria for a kick-ass burrito is sometimes hard. Download on the App Store today.">
+    <meta property="og:image" content="http://burrito.af/icon.png">
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200">
+    <title>BURRITO AF&nbsp;&nbsp;🌯 </title>
     <style>
       @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,800);
       body {
