--- a/index.html
+++ b/index.html
@@ -148,6 +148,11 @@
             A downright game-changer in burrito acquisition.
             <p>— <em>Alex</em></p>
           </blockquote>
+          <blockquote>
+            Is that what you've been doing all this time??
+            <p>— <em>My girlfriend (who exists, I swear)</em></p>
+          </blockquote>
+
           <h3>We cater</h3>
           <p>
             <ul>
