adds pointer-events: none; to overlay

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       .wrapper > .device-iphone img.overlay {
         width: 220px;
         position: absolute;
+        pointer-events: none;
       }
       .wrapper > .content {
         margin-left: 16rem;
