--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
           <p>
             <ul>
               <li>San Francisco + Bay Area</li>
+              <li>Santa Barbara</li>
               <li>Los Angeles</li>
               <li>San Diego</li>
             </ul>
